--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jack - personal portfolio</title>
+  <title>Ali's - personal portfolio</title>
 
   <!-- 
     - favicon
@@ -37,7 +37,7 @@
     <div class="container">
 
       <h1 class="h1 logo">
-        <a href="#">Jack<span>.</span></a>
+        <a href="#">Ali<span>.</span></a>
       </h1>
 
       <div class="navbar-actions">
@@ -171,7 +171,7 @@
               </div>
 
               <h2 class="h2 card-title">
-                12+ <strong>Years of Experience</strong>
+                4+ <strong>Years of Experience</strong>
               </h2>
 
               <ion-icon name="chevron-forward-outline"></ion-icon>
@@ -236,7 +236,7 @@
           <h2 class="h3 section-title">Need a Creative Product? I can Help You!</h2>
 
           <p class="section-text">
-            Hi! I’m Jack Reacher, and I’m a developer who has passion for building clean web applications with intuitive
+            Hi! I’m Ali usman, and I’m a developer who has passion for building clean web applications with intuitive
             functionalities. I enjoy the process of turning ideas into reality using creative solutions. I’m always
             curious about
             learning new skills, tools, and concepts. In addition to working on various solo full stack projects, I have
@@ -738,9 +738,8 @@
               <div class="wrapper">
                 <h3 class="h4 contact-item-title">Phone:</h3>
 
-                <a href="tel:01234567789" class="contact-info">(01) 234 567 789</a>
+                <a href="tel:01234567789" class="contact-info">(+92) 308 8655 226</a>
 
-                <a href="tel:09765432200" class="contact-info">(09) 765 432 200</a>
               </div>
 
             </li>
@@ -754,9 +753,8 @@
               <div class="wrapper">
                 <h3 class="h4 contact-item-title">Email:</h3>
 
-                <a href="mailto:info@jack.com" class="contact-info">info@jack.com</a>
+                <a href="mailto:ali.usman.dev@gmail.com" class="contact-info">ali.usman.dev@gmail.com</a>
 
-                <a href="mailto:support@jack.com" class="contact-info">support@jack.com</a>
               </div>
 
             </li>
@@ -885,12 +883,12 @@
 
       <p class="h1 logo">
         <a href="#">
-          Jack<span>.</span>
+          Ali<span>.</span>
         </a>
       </p>
 
       <p class="copyright">
-        &copy; 2022 <a href="#">codewithsadee</a>. All rights reserved
+        &copy; 2023 <a href="#">codewithsadee</a>. All rights reserved
       </p>
 
     </div>
