--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
 
         <div class="hero-content">
 
-          <h2 class="h2 hero-title">We Design & Build Creative Products</h2>
+          <!-- <h2 class="h2 hero-title">We Design & Build Creative Products</h2> -->
 
-          <a href="#contact" class="btn btn-primary">Get in touch</a>
+          <!-- <a href="#contact" class="btn btn-primary">Get in touch</a> -->
 
         </div>
 
