--- a/index.html
+++ b/index.html
@@ -41,12 +41,6 @@
       </h1>
 
       <div class="navbar-actions">
-
-        <select name="language" id="lang">
-          <option value="en">En</option>
-          <option value="ar">Ar</option>
-        </select>
-
         <button class="theme-btn" aria-label="Change Theme" title="Change Theme" data-theme-btn>
           <span class="icon"></span>
         </button>
@@ -187,7 +181,7 @@
               </div>
 
               <h2 class="h2 card-title">
-                230+ <strong>Completed Projects</strong>
+                10+ <strong>Completed Projects</strong>
               </h2>
 
               <ion-icon name="chevron-forward-outline"></ion-icon>
@@ -203,7 +197,7 @@
               </div>
 
               <h2 class="h2 card-title">
-                95+ <strong>Happy Clients</strong>
+                10+ <strong>Happy Clients</strong>
               </h2>
 
               <ion-icon name="chevron-forward-outline"></ion-icon>
@@ -236,8 +230,7 @@
           <h2 class="h3 section-title">Need a Creative Product? I can Help You!</h2>
 
           <p class="section-text">
-            Hi! I’m Ali usman, and I’m a developer who has passion for building clean web applications with intuitive
-            functionalities. I enjoy the process of turning ideas into reality using creative solutions. I’m always
+            Hi! I’m Ali usman, and I’m a software engineer with passion to build world class mobile applications. I enjoy the process of turning ideas into reality using creative solutions. I’m always
             curious about
             learning new skills, tools, and concepts. In addition to working on various solo full stack projects, I have
             worked with
@@ -320,60 +313,50 @@
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">TypeScript</div>
+                <div class="tooltip">Swift</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/typescript.png" alt="TypeScript logo">
+                  <img src="./assets/images/swift.png" alt="swift logo">
                 </div>
               </div>
             </li>
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">jQuery</div>
+                <div class="tooltip">Objective C</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/jquery.png" alt="jQuery logo">
+                  <img src="./assets/images/objc.png" alt="Objective-c logo">
                 </div>
               </div>
             </li>
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">Bootstrap</div>
+                <div class="tooltip">DART</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/bootstrap.png" alt="Bootstrap logo">
+                  <img src="./assets/images/dart.png" alt="Dart logo">
                 </div>
               </div>
             </li>
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">Angular</div>
+                <div class="tooltip">Java</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/angular.png" alt="Angular logo">
+                  <img src="./assets/images/java.png" alt="Java logo">
                 </div>
               </div>
             </li>
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">React</div>
+                <div class="tooltip">Swift UI</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/react.png" alt="React logo">
-                </div>
-              </div>
-            </li>
-
-            <li>
-              <div class="skill-card">
-                <div class="tooltip">Vue</div>
-
-                <div class="card-icon">
-                  <img src="./assets/images/vue.png" alt="Vue logo">
+                  <img src="./assets/images/swiftui.png" alt="SwiftUI logo">
                 </div>
               </div>
             </li>
@@ -390,54 +373,58 @@
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">PugJs</div>
+                <div class="tooltip">Tensor Flow</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/pugjs.png" alt="PugJs logo">
+                  <img src="./assets/images/tensor.png" alt="Tensor Flow logo">
                 </div>
               </div>
             </li>
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">SASS</div>
+                <div class="tooltip">XML</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/sass.png" alt="SASS logo">
+                  <img src="./assets/images/xml.png" alt="XML logo">
                 </div>
               </div>
             </li>
 
           </ul>
 
+          <!-- 
+        - # TOOLS LIST
+         -->
+
           <ul class="tools-list">
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">Ajax</div>
+                <div class="tooltip">Xcode</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/ajax.png" alt="Ajax logo">
+                  <img src="./assets/images/xcode.png" alt="Xcode logo">
                 </div>
               </div>
             </li>
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">Gulp</div>
+                <div class="tooltip">Test Flight</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/gulp.png" alt="Gulp logo">
+                  <img src="./assets/images/testflight.png" alt="Test Flight logo">
                 </div>
               </div>
             </li>
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">Webpack</div>
+                <div class="tooltip">App Store</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/webpack.png" alt="Webpack logo">
+                  <img src="./assets/images/appstore.png" alt="App Store Connect logo">
                 </div>
               </div>
             </li>
@@ -454,10 +441,10 @@
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">Npm</div>
+                <div class="tooltip">Figma</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/npm.png" alt="Npm logo">
+                  <img src="./assets/images/figma.png" alt="Figma logo">
                 </div>
               </div>
             </li>
@@ -494,30 +481,80 @@
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">ClickUp</div>
+                <div class="tooltip">BitRise</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/clickup.png" alt="ClickUp logo">
+                  <img src="./assets/images/bitrise.png" alt="BitRise logo">
                 </div>
               </div>
             </li>
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">Slack</div>
+                <div class="tooltip">Sentry</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/slack.png" alt="Slack logo">
+                  <img src="./assets/images/Sentry.png" alt="Sentry logo">
                 </div>
               </div>
             </li>
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">Photoshop</div>
+                <div class="tooltip">CI/CD</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/photoshop.png" alt="Photoshop logo">
+                  <img src="./assets/images/cicd.png" alt="CI/CD logo">
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="skill-card">
+                <div class="tooltip">Post Man</div>
+
+                <div class="card-icon">
+                  <img src="./assets/images/postman.png" alt="Post Man logo">
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="skill-card">
+                <div class="tooltip">Android Studio</div>
+
+                <div class="card-icon">
+                  <img src="./assets/images/android.png" alt="Android Studio logo">
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="skill-card">
+                <div class="tooltip">Flutter</div>
+
+                <div class="card-icon">
+                  <img src="./assets/images/flutter.png" alt="Flutter logo">
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="skill-card">
+                <div class="tooltip">Post Man</div>
+
+                <div class="card-icon">
+                  <img src="./assets/images/postman.png" alt="Post Man logo">
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="skill-card">
+                <div class="tooltip">Jirra</div>
+
+                <div class="card-icon">
+                  <img src="./assets/images/jirra.png" alt="Jirra logo">
                 </div>
               </div>
             </li>
@@ -888,7 +925,7 @@
       </p>
 
       <p class="copyright">
-        &copy; 2023 <a href="#">codewithsadee</a>. All rights reserved
+        &copy; 2023 <a href="#">swift-guy</a>. All rights reserved
       </p>
 
     </div>
