--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                 <div class="tooltip">Git</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/git.png" alt="Git logo">
+                  <img src="./assets/images/github.png" alt="Git logo">
                 </div>
               </div>
             </li>
@@ -494,7 +494,7 @@
                 <div class="tooltip">Sentry</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/Sentry.png" alt="Sentry logo">
+                  <img src="./assets/images/sentry.png" alt="Sentry logo">
                 </div>
               </div>
             </li>
@@ -524,7 +524,7 @@
                 <div class="tooltip">Android Studio</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/android.png" alt="Android Studio logo">
+                  <img src="./assets/images/androidstudio.png" alt="Android Studio logo">
                 </div>
               </div>
             </li>
@@ -535,16 +535,6 @@
 
                 <div class="card-icon">
                   <img src="./assets/images/flutter.png" alt="Flutter logo">
-                </div>
-              </div>
-            </li>
-
-            <li>
-              <div class="skill-card">
-                <div class="tooltip">Post Man</div>
-
-                <div class="card-icon">
-                  <img src="./assets/images/postman.png" alt="Post Man logo">
                 </div>
               </div>
             </li>
@@ -751,18 +741,6 @@
           <ul class="contact-list">
 
             <li class="contact-list-item">
-
-              <div class="contact-item-icon">
-                <ion-icon name="location-outline"></ion-icon>
-              </div>
-
-              <div class="wrapper">
-                <h3 class="h4 contact-item-title">Address:</h3>
-
-                <address class="contact-info">
-                  941 Saqrqorish Road, alandalos, grnata, wa 47122-4194
-                </address>
-              </div>
 
             </li>
 
