--- a/pages/tailorie.html
+++ b/pages/tailorie.html
@@ -61,10 +61,10 @@
 	<div class="container">
 		<div class="row align-items-center">
 			<div class="col-md-6 order-2 order-md-1 text-center text-md-left">
-				<h1 class="text-white font-weight-bold mb-4">Showcase your app with Small Apps</h1>
-				<p class="text-white mb-5">Besides its beautiful design. Laapp is an incredibly rich core framework for you to
-					showcase your App.</p>
-				<a href="FAQ.html" class="btn btn-main-md">Download Now</a>
+				<h1 class="text-white font-weight-bold mb-4">Tailorie</h1>
+				<p class="text-white mb-5">Social App For Recommendations of products.
+					.</p>
+				<a href="" class="btn btn-main-md">Download Now</a>
 			</div>
 			<div class="col-md-6 text-center order-1 order-md-2">
 				<img class="img-fluid" src="images/mobile.png" alt="screenshot">
